# Fabrica_libros

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  scripts_generate_demo_book.py
bookforge/: cli.py  daemon.py
bookforge/core/: config.py  llm.py  models.py  storage.py
bookforge/orchestrator/: autonomy.py  flags.py  main.py  runner.py
bookforge/pipelines/p1_market/: pipeline.py
bookforge/pipelines/p2_production/: pipeline.py
bookforge/pipelines/p3_visual/: pipeline.py
bookforge/pipelines/p4_publish/: pipeline.py
bookforge/pipelines/p5_marketing/: pipeline.py
brands/: infinity-ascend-press.yaml
tests/: test_autonomy.py  test_circuit_breakers.py  test_flags.py  test_models_and_llm.py  test_publish_specs.py  test_state_machine.py  test_storage.py
